<resources>
    <string name="app_name">AndroidCertification</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="results_format">Resultados: %1$d</string>

    <!--region Calculator Screen -->
    <string name="calculator__title">Calculadora</string>
    <!-- Hint for first operand EditText -->
    <string name="type_operand_one_hint">Type Operand 1</string>
    <!-- Hint for second operand EditText -->
    <string name="type_operand_two_hint">Type Operand 2</string>
    <!-- Button label for add operation -->
    <string name="add_operation_text">Add</string>
    <!-- Button label for subtract operation -->
    <string name="sub_operation_text">Sub</string>
    <!-- Button label for divide operation -->
    <string name="div_operation_text">Div</string>
    <!-- Button label for mul operation -->
    <string name="mul_operation_text">Mul</string>
    <!-- Button label for pow operation -->
    <string name="pow_operation_text">Pow</string>
    <!-- Message for textview in case of errors  -->
    <string name="computationError">Error</string>
    <!--endregion-->

    <!--region UI Test-->
    <string name="button_main">Send</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="text_header">Message Received</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <!--endregion-->

    <!--region PhoneNumber Activity-->
    <string name="show">Show</string>
    <string name="hint_phonenumber">Enter a phone number</string>
    <string name="phonenumber_label">Phone Number:</string>
    <string name="nothing_entered">Nothing entered</string>
    <string name="row_info_format">%d - %s</string>
    <string name="notification__notify_me">Notify Me!</string>
    <string name="hello_toast__show_toast">Show Toast</string>
    <string name="hello_toast__increase_counter">Increase Counter</string>
    <string name="menu__night_theme">Night Theme</string>
    <string name="menu__day_theme">Day Theme</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="word_title">Word</string>
    <!--endregion-->
</resources>
